# Albumer

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: albums.rs  cors.rs  main.rs  spotify_api.rs
backend/src/routes/: import.rs  library.rs  mod.rs
backend/src/spotify/: api.rs  auth.rs
backend/src/structs/: album.rs
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/album/: album.tsx
frontend/src/components/page-layout/: page-layout.tsx  styles.css
frontend/src/components/page-layout/page-content/: page-content.tsx
