[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
serde = { version = "1.0", features = ["derive"] }
rocket_cors = "0.6.0"
reqwest = "0.11.1"
serde_json = "1.0.116"
base64 = "0.13.0"
dotenv = "0.15.0"
url = "2.5.0"
